# Roly_RL

./: .gitignore  readme.txt
Inverse_kinematics/: IK_train.py  IK_use.py  Roly_IK_model.pth  joint200point.npy  label200point.npy
Inverse_kinematics/markers/: main.py  main_new_origin.py
Inverse_kinematics/models/: 1000points_v1.pth  10points_v1.pth  2000points_v1.pth
RL_IK/v1/: RL_Inverse_kinematics.py  readme.md  train&test.py
RL_arm/v1/: Camera.py  Controller.py  (+4 more)
RL_arm/v1 A2C/: RL_info.py  main.py  state_action.py
Roly/: Camera.py  Roly.py  Roly_demo.py  Roly_demo0506.py  Roly_demo2.py  Roly_main copy.py  Roly_main.py  Roly_main_0515.py  Roly_main_0515_multi_motor.py  Roly_move_only.py  Roly_new.py  Roly_old.py  Roly_pose.py  UI.py  UI_main.py  UI_window.py  claw.py  main copy.py  main.py  test_motor.py  test_thread.py  thread.py
RolyURDF2/: Roly.xml
Roly_XML/: CMakeLists.txt  Roly.xml  package.xml
Roly_XML2/: Roly.xml
Roly_XML2-2/: Roly.xml  package.xml
Roly_XML3/: CMakeLists.txt  Roly.xml  package.xml
Roly_XML4/: Roly.xml  package.xml
Roly_simulator/: main.py
Roly_simulator/walking/Roly_XML4/: CMakeLists.txt  Roly.xml
Roly_simulator/walking/Roly_XML4/meshes/: L finger1-2.STL  L finger3-1.STL  L_arm4.STL  L_hip_roll.STL  R finger1-1.STL  R_ankle_pitch.STL  R_arm1.STL  R_palm.STL  R_shoulder.STL
Roly_simulator/walking/Roly_XML4/urdf/: Roly_with_arm X12 version.csv
foward_kinematics/: main.py
head/: main3.py  main4.py
natural_posture/: NP_use.py
plot/: progress_bar.py  smooth.py  step_reward_plot.npy
sim/: main3.py  main4.py
(+4210 files in other folders)
